Added checkers to game state and fixed opponent strength
