# src/main/kotlin/de/timbachmann/api/engine/GameState.kt
@@ -1,0 +1,6 @@
+package de.timbachmann.api.engine
+
+data class GameState(
+    val gameState: String,
+    val checkers: List<String>,
+)
