# src/main/kotlin/de/timbachmann/api/model/response/GameResponse.kt
@@ -19,6 +19,7 @@ data class GameResponse(
     val moves: List<String>,
     val white: String,
     val black: String,
+    val checkers: List<String>,
     val opponentStrength: Int,
     val opponent: ChessOpponent,
     val winner: String
